--- a/index.html
+++ b/index.html
@@ -155,3 +155,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
