test: add unit tests

--- a/index.html
+++ b/index.html
@@ -217,3 +217,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
