--- a/index.html
+++ b/index.html
@@ -213,3 +213,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
