--- a/index.html
+++ b/index.html
@@ -219,3 +219,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
