--- a/index.html
+++ b/index.html
@@ -235,3 +235,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
