--- a/index.html
+++ b/index.html
@@ -237,3 +237,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
