--- a/index.html
+++ b/index.html
@@ -245,3 +245,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
