--- a/index.html
+++ b/index.html
@@ -261,3 +261,5 @@
 <!-- Enhanced user experience -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
