--- a/index.html
+++ b/index.html
@@ -267,3 +267,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
