--- a/index.html
+++ b/index.html
@@ -291,3 +291,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
