--- a/index.html
+++ b/index.html
@@ -289,3 +289,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
