--- a/index.html
+++ b/index.html
@@ -301,3 +301,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
