--- a/index.html
+++ b/index.html
@@ -305,3 +305,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
