--- a/index.html
+++ b/index.html
@@ -309,3 +309,5 @@
 <!-- Enhanced user experience -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
