--- a/index.html
+++ b/index.html
@@ -311,3 +311,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
