--- a/index.html
+++ b/index.html
@@ -313,3 +313,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
