--- a/index.html
+++ b/index.html
@@ -325,3 +325,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
