--- a/index.html
+++ b/index.html
@@ -327,3 +327,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
