--- a/index.html
+++ b/index.html
@@ -349,3 +349,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
