--- a/index.html
+++ b/index.html
@@ -359,3 +359,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
