--- a/index.html
+++ b/index.html
@@ -379,3 +379,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
