--- a/index.html
+++ b/index.html
@@ -395,3 +395,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
