--- a/index.html
+++ b/index.html
@@ -407,3 +407,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
