--- a/index.html
+++ b/index.html
@@ -439,3 +439,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
