test: add unit tests

--- a/index.html
+++ b/index.html
@@ -435,3 +435,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
