--- a/index.html
+++ b/index.html
@@ -441,3 +441,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
