--- a/index.html
+++ b/index.html
@@ -451,3 +451,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
