--- a/index.html
+++ b/index.html
@@ -453,3 +453,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
