--- a/index.html
+++ b/index.html
@@ -3577,3 +3577,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
