--- a/index.html
+++ b/index.html
@@ -477,3 +477,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
