--- a/index.html
+++ b/index.html
@@ -3581,3 +3581,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
