refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -3583,3 +3583,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
