--- a/index.html
+++ b/index.html
@@ -489,3 +489,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
