--- a/index.html
+++ b/index.html
@@ -507,3 +507,5 @@
 <!-- Improved accessibility -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
