--- a/index.html
+++ b/index.html
@@ -521,3 +521,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
