--- a/index.html
+++ b/index.html
@@ -555,3 +555,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
