--- a/index.html
+++ b/index.html
@@ -3631,3 +3631,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
