--- a/index.html
+++ b/index.html
@@ -3633,3 +3633,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
