--- a/index.html
+++ b/index.html
@@ -3637,3 +3637,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
