docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -3639,3 +3639,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
