--- a/index.html
+++ b/index.html
@@ -563,3 +563,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
