--- a/index.html
+++ b/index.html
@@ -3641,3 +3641,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
