--- a/index.html
+++ b/index.html
@@ -3643,3 +3643,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
