--- a/index.html
+++ b/index.html
@@ -3645,3 +3645,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
