--- a/index.html
+++ b/index.html
@@ -3647,3 +3647,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
