--- a/index.html
+++ b/index.html
@@ -3649,3 +3649,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
