feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -3663,3 +3663,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
