perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -3665,3 +3665,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
