--- a/index.html
+++ b/index.html
@@ -3667,3 +3667,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
