chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -3675,3 +3675,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
