--- a/index.html
+++ b/index.html
@@ -3677,3 +3677,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
