--- a/index.html
+++ b/index.html
@@ -3679,3 +3679,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
