--- a/index.html
+++ b/index.html
@@ -3683,3 +3683,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
