--- a/index.html
+++ b/index.html
@@ -597,3 +597,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
