docs: update documentation

--- a/index.html
+++ b/index.html
@@ -599,3 +599,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
