--- a/index.html
+++ b/index.html
@@ -3687,3 +3687,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
