--- a/index.html
+++ b/index.html
@@ -609,3 +609,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
