--- a/index.html
+++ b/index.html
@@ -611,3 +611,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
