--- a/index.html
+++ b/index.html
@@ -3715,3 +3715,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
