--- a/index.html
+++ b/index.html
@@ -3717,3 +3717,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
