fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -633,3 +633,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
