test: add unit tests

--- a/index.html
+++ b/index.html
@@ -3729,3 +3729,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
