feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -3731,3 +3731,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
