--- a/index.html
+++ b/index.html
@@ -663,3 +663,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
