--- a/index.html
+++ b/index.html
@@ -669,3 +669,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
