--- a/index.html
+++ b/index.html
@@ -667,3 +667,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
