--- a/index.html
+++ b/index.html
@@ -3747,3 +3747,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
