--- a/index.html
+++ b/index.html
@@ -3745,3 +3745,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
