--- a/index.html
+++ b/index.html
@@ -665,3 +665,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
