fix: resolve bug in module

--- a/index.html
+++ b/index.html
@@ -3751,3 +3751,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
