feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -3749,3 +3749,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
