--- a/index.html
+++ b/index.html
@@ -3753,3 +3753,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
