--- a/index.html
+++ b/index.html
@@ -3763,3 +3763,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
