fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -3761,3 +3761,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
