--- a/index.html
+++ b/index.html
@@ -679,3 +679,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
