--- a/index.html
+++ b/index.html
@@ -681,3 +681,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
