--- a/index.html
+++ b/index.html
@@ -3771,3 +3771,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
