--- a/index.html
+++ b/index.html
@@ -685,3 +685,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
