--- a/index.html
+++ b/index.html
@@ -3775,3 +3775,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
