--- a/index.html
+++ b/index.html
@@ -3801,3 +3801,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
