feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -3803,3 +3803,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
