--- a/index.html
+++ b/index.html
@@ -3805,3 +3805,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
