test: add unit tests

--- a/index.html
+++ b/index.html
@@ -3809,3 +3809,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
