perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -3811,3 +3811,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
