--- a/index.html
+++ b/index.html
@@ -3815,3 +3815,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
