--- a/index.html
+++ b/index.html
@@ -709,3 +709,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
