--- a/index.html
+++ b/index.html
@@ -3829,3 +3829,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
