--- a/index.html
+++ b/index.html
@@ -3831,3 +3831,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
