--- a/index.html
+++ b/index.html
@@ -713,3 +713,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
