--- a/index.html
+++ b/index.html
@@ -3833,3 +3833,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
