--- a/index.html
+++ b/index.html
@@ -3835,3 +3835,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
