--- a/index.html
+++ b/index.html
@@ -3837,3 +3837,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
