--- a/index.html
+++ b/index.html
@@ -759,3 +759,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
