--- a/index.html
+++ b/index.html
@@ -761,3 +761,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
