fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -3879,3 +3879,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
