style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -797,3 +797,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
