feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -3889,3 +3889,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
