--- a/index.html
+++ b/index.html
@@ -801,3 +801,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
