--- a/index.html
+++ b/index.html
@@ -3893,3 +3893,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
