--- a/index.html
+++ b/index.html
@@ -807,3 +807,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
