feat: add new feature 2023-12-11

--- a/index.html
+++ b/index.html
@@ -3895,3 +3895,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
