--- a/index.html
+++ b/index.html
@@ -819,3 +819,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
