--- a/index.html
+++ b/index.html
@@ -3909,3 +3909,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
