--- a/index.html
+++ b/index.html
@@ -3913,3 +3913,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
