--- a/index.html
+++ b/index.html
@@ -3919,3 +3919,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
