--- a/index.html
+++ b/index.html
@@ -3921,3 +3921,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
