--- a/index.html
+++ b/index.html
@@ -3923,3 +3923,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
