--- a/index.html
+++ b/index.html
@@ -3925,3 +3925,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
