--- a/index.html
+++ b/index.html
@@ -839,3 +839,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
