--- a/index.html
+++ b/index.html
@@ -841,3 +841,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
