style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -857,3 +857,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
