--- a/index.html
+++ b/index.html
@@ -875,3 +875,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
