--- a/index.html
+++ b/index.html
@@ -873,3 +873,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
