feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -3965,3 +3965,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
