fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -3969,3 +3969,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
