docs: update documentation

--- a/index.html
+++ b/index.html
@@ -3967,3 +3967,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
