--- a/index.html
+++ b/index.html
@@ -915,3 +915,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
