--- a/index.html
+++ b/index.html
@@ -937,3 +937,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
