--- a/index.html
+++ b/index.html
@@ -941,3 +941,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
