--- a/index.html
+++ b/index.html
@@ -3993,3 +3993,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
