--- a/index.html
+++ b/index.html
@@ -3997,3 +3997,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<link rel="stylesheet" href="styles.css">
