style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -4005,3 +4005,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
