--- a/index.html
+++ b/index.html
@@ -4003,3 +4003,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
