refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -4017,3 +4017,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
