--- a/index.html
+++ b/index.html
@@ -971,3 +971,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
