--- a/index.html
+++ b/index.html
@@ -4021,3 +4021,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
