--- a/index.html
+++ b/index.html
@@ -4039,3 +4039,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
