--- a/index.html
+++ b/index.html
@@ -4045,3 +4045,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
