docs: update documentation

--- a/index.html
+++ b/index.html
@@ -4037,3 +4037,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
