refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -981,3 +981,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
