--- a/index.html
+++ b/index.html
@@ -977,3 +977,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
