--- a/index.html
+++ b/index.html
@@ -979,3 +979,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
