--- a/index.html
+++ b/index.html
@@ -4065,3 +4065,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
