--- a/index.html
+++ b/index.html
@@ -4069,3 +4069,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
