refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -4077,3 +4077,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
