--- a/index.html
+++ b/index.html
@@ -4067,3 +4067,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
