chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -1001,3 +1001,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
