--- a/index.html
+++ b/index.html
@@ -1003,3 +1003,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
