docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -4107,3 +4107,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
