fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -4105,3 +4105,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
