--- a/index.html
+++ b/index.html
@@ -4103,3 +4103,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
