--- a/index.html
+++ b/index.html
@@ -1013,3 +1013,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
