--- a/index.html
+++ b/index.html
@@ -1011,3 +1011,5 @@
 <!-- Improved accessibility -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
