--- a/index.html
+++ b/index.html
@@ -4111,3 +4111,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
