docs: update documentation

--- a/index.html
+++ b/index.html
@@ -1019,3 +1019,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
