docs: update documentation

--- a/index.html
+++ b/index.html
@@ -1017,3 +1017,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
