--- a/index.html
+++ b/index.html
@@ -1021,3 +1021,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
