--- a/index.html
+++ b/index.html
@@ -4133,3 +4133,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
