--- a/index.html
+++ b/index.html
@@ -4147,3 +4147,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
