--- a/index.html
+++ b/index.html
@@ -4145,3 +4145,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
