docs: update documentation

--- a/index.html
+++ b/index.html
@@ -4143,3 +4143,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
