--- a/index.html
+++ b/index.html
@@ -1059,3 +1059,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
