docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -1057,3 +1057,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
