test: add unit tests

--- a/index.html
+++ b/index.html
@@ -1055,3 +1055,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
