fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -1053,3 +1053,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
