--- a/index.html
+++ b/index.html
@@ -4161,3 +4161,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
