--- a/index.html
+++ b/index.html
@@ -4157,3 +4157,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
