feat: add new feature 2024-02-01

--- a/index.html
+++ b/index.html
@@ -4155,3 +4155,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
