perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -4159,3 +4159,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
