refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -1075,3 +1075,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
