--- a/index.html
+++ b/index.html
@@ -4163,3 +4163,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
