--- a/index.html
+++ b/index.html
@@ -1097,3 +1097,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
