feat: add new feature 2024-02-04

--- a/index.html
+++ b/index.html
@@ -1099,3 +1099,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
