--- a/index.html
+++ b/index.html
@@ -4173,3 +4173,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
