--- a/index.html
+++ b/index.html
@@ -4167,3 +4167,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
