feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -4169,3 +4169,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
