test: add unit tests

--- a/index.html
+++ b/index.html
@@ -4171,3 +4171,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
