style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -1101,3 +1101,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
