fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -1111,3 +1111,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
