--- a/index.html
+++ b/index.html
@@ -1109,3 +1109,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
