--- a/index.html
+++ b/index.html
@@ -4181,3 +4181,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
