--- a/index.html
+++ b/index.html
@@ -4179,3 +4179,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
