--- a/index.html
+++ b/index.html
@@ -4175,3 +4175,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
