--- a/index.html
+++ b/index.html
@@ -1117,3 +1117,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
