docs: update documentation

--- a/index.html
+++ b/index.html
@@ -1113,3 +1113,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
