--- a/index.html
+++ b/index.html
@@ -1119,3 +1119,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
