docs: update documentation

--- a/index.html
+++ b/index.html
@@ -1115,3 +1115,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
