--- a/index.html
+++ b/index.html
@@ -1129,3 +1129,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
