test: add unit tests

--- a/index.html
+++ b/index.html
@@ -1127,3 +1127,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
