--- a/index.html
+++ b/index.html
@@ -1131,3 +1131,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
