style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -4189,3 +4189,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
