--- a/index.html
+++ b/index.html
@@ -4209,3 +4209,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
