docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -4211,3 +4211,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
