--- a/index.html
+++ b/index.html
@@ -4213,3 +4213,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Improved accessibility -->
