--- a/index.html
+++ b/index.html
@@ -1167,3 +1167,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
