--- a/index.html
+++ b/index.html
@@ -4225,3 +4225,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
