--- a/index.html
+++ b/index.html
@@ -4223,3 +4223,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
