--- a/index.html
+++ b/index.html
@@ -4221,3 +4221,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
