--- a/index.html
+++ b/index.html
@@ -1171,3 +1171,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
