--- a/index.html
+++ b/index.html
@@ -4235,3 +4235,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
