--- a/index.html
+++ b/index.html
@@ -4233,3 +4233,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
