fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -1181,3 +1181,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
