--- a/index.html
+++ b/index.html
@@ -4237,3 +4237,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
