--- a/index.html
+++ b/index.html
@@ -1187,3 +1187,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
