--- a/index.html
+++ b/index.html
@@ -1183,3 +1183,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
