--- a/index.html
+++ b/index.html
@@ -4241,3 +4241,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
