--- a/index.html
+++ b/index.html
@@ -1185,3 +1185,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
