--- a/index.html
+++ b/index.html
@@ -1199,3 +1199,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
