--- a/index.html
+++ b/index.html
@@ -4247,3 +4247,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
