--- a/index.html
+++ b/index.html
@@ -4245,3 +4245,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
