docs: update documentation

--- a/index.html
+++ b/index.html
@@ -4243,3 +4243,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
