--- a/index.html
+++ b/index.html
@@ -4249,3 +4249,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
