--- a/index.html
+++ b/index.html
@@ -1201,3 +1201,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
