--- a/index.html
+++ b/index.html
@@ -1217,3 +1217,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
