--- a/index.html
+++ b/index.html
@@ -1219,3 +1219,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
