--- a/index.html
+++ b/index.html
@@ -4281,3 +4281,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
