--- a/index.html
+++ b/index.html
@@ -1227,3 +1227,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
