test: add unit tests

--- a/index.html
+++ b/index.html
@@ -1229,3 +1229,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
