fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -1235,3 +1235,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
