--- a/index.html
+++ b/index.html
@@ -1237,3 +1237,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
