--- a/index.html
+++ b/index.html
@@ -4283,3 +4283,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
