--- a/index.html
+++ b/index.html
@@ -1239,3 +1239,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
