--- a/index.html
+++ b/index.html
@@ -4291,3 +4291,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
