--- a/index.html
+++ b/index.html
@@ -4293,3 +4293,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
