test: add unit tests

--- a/index.html
+++ b/index.html
@@ -4305,3 +4305,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
