style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -1249,3 +1249,5 @@
 <!-- Improved accessibility -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
