--- a/index.html
+++ b/index.html
@@ -4307,3 +4307,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Improved accessibility -->
