--- a/index.html
+++ b/index.html
@@ -1255,3 +1255,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
