--- a/index.html
+++ b/index.html
@@ -1253,3 +1253,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
