--- a/index.html
+++ b/index.html
@@ -1257,3 +1257,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
