fix: resolve bug in module

--- a/index.html
+++ b/index.html
@@ -1251,3 +1251,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
