--- a/index.html
+++ b/index.html
@@ -1259,3 +1259,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
