--- a/index.html
+++ b/index.html
@@ -1291,3 +1291,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
