refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -1289,3 +1289,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
