feat: add new feature 2024-03-07

--- a/index.html
+++ b/index.html
@@ -1295,3 +1295,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
