--- a/index.html
+++ b/index.html
@@ -1297,3 +1297,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
