--- a/index.html
+++ b/index.html
@@ -4371,3 +4371,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
