fix: resolve bug in component

--- a/index.html
+++ b/index.html
@@ -4367,3 +4367,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
