--- a/index.html
+++ b/index.html
@@ -1333,3 +1333,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
