chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -4381,3 +4381,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
