--- a/index.html
+++ b/index.html
@@ -1325,3 +1325,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
