--- a/index.html
+++ b/index.html
@@ -4373,3 +4373,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
