refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -4383,3 +4383,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
