fix: resolve bug in component

--- a/index.html
+++ b/index.html
@@ -1339,3 +1339,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
