feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -4387,3 +4387,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
