docs: update documentation

--- a/index.html
+++ b/index.html
@@ -4407,3 +4407,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
