fix: resolve bug in component

--- a/index.html
+++ b/index.html
@@ -1393,3 +1393,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
