refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -4437,3 +4437,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
