perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -4445,3 +4445,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
