chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -4459,3 +4459,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
