fix: resolve bug in module

--- a/index.html
+++ b/index.html
@@ -4475,3 +4475,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
