test: add unit tests

--- a/index.html
+++ b/index.html
@@ -1463,3 +1463,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
