feat: add new feature 2024-03-28

--- a/index.html
+++ b/index.html
@@ -1459,3 +1459,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
