feat: add new feature 2024-03-28

--- a/index.html
+++ b/index.html
@@ -1457,3 +1457,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
