chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -4487,3 +4487,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
