fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -1467,3 +1467,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
