chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -4507,3 +4507,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
