fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -1473,3 +1473,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
