test: add unit tests

--- a/index.html
+++ b/index.html
@@ -1497,3 +1497,5 @@
 <!-- Enhanced user experience -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
