docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -1499,3 +1499,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
