test: add unit tests

--- a/index.html
+++ b/index.html
@@ -1525,3 +1525,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
