refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -4561,3 +4561,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
