refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -1533,3 +1533,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
