fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -4581,3 +4581,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
