docs: update documentation

--- a/index.html
+++ b/index.html
@@ -1551,3 +1551,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
