style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -4601,3 +4601,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
