chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -4611,3 +4611,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
