test: add unit tests

--- a/index.html
+++ b/index.html
@@ -1589,3 +1589,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
