chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -4641,3 +4641,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
