docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -4661,3 +4661,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
