docs: update documentation

--- a/index.html
+++ b/index.html
@@ -4681,3 +4681,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<script src="app.js"></script>
