docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -1635,3 +1635,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
