refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -4687,3 +4687,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
