chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -1629,3 +1629,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
