chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -1653,3 +1653,5 @@
 <script src="app.js"></script>
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
