feat: add new feature 2024-05-02

--- a/index.html
+++ b/index.html
@@ -4723,3 +4723,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
