fix: resolve bug in module

--- a/index.html
+++ b/index.html
@@ -4793,3 +4793,5 @@
 <script src="app.js"></script>
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
