chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -4797,3 +4797,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
