docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -4807,3 +4807,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
