test: add unit tests

--- a/index.html
+++ b/index.html
@@ -1769,3 +1769,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
