docs: update documentation

--- a/index.html
+++ b/index.html
@@ -4841,3 +4841,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
