refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -1829,3 +1829,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
