refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -4867,3 +4867,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
