fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -4861,3 +4861,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
