feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -4863,3 +4863,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
