docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -4883,3 +4883,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
