perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -4899,3 +4899,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
