docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -1857,3 +1857,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
