style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -1863,3 +1863,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
