feat: add new feature 2024-06-06

--- a/index.html
+++ b/index.html
@@ -1865,3 +1865,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
