style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -4925,3 +4925,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
