refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -4917,3 +4917,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
