docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -4923,3 +4923,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
