fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -4943,3 +4943,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
