feat: add new feature 2024-06-10

--- a/index.html
+++ b/index.html
@@ -4945,3 +4945,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
