perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -4947,3 +4947,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
