chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -1917,3 +1917,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
