perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -1923,3 +1923,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
