refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -1937,3 +1937,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
