refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -5015,3 +5015,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
