test: add unit tests

--- a/index.html
+++ b/index.html
@@ -1963,3 +1963,5 @@
 <!-- Improved accessibility -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
