refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -5029,3 +5029,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
