perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -1979,3 +1979,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
