style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -1981,3 +1981,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
