docs: update documentation

--- a/index.html
+++ b/index.html
@@ -5059,3 +5059,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
