fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -2029,3 +2029,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
