feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -2063,3 +2063,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
