docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -2095,3 +2095,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
