feat: add new feature 2024-07-08

--- a/index.html
+++ b/index.html
@@ -5111,3 +5111,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
