feat: add new feature 2024-07-10

--- a/index.html
+++ b/index.html
@@ -5131,3 +5131,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
