feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -2163,3 +2163,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
