fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -5181,3 +5181,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
