feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -2197,3 +2197,5 @@
 <script src="app.js"></script>
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
