refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -5191,3 +5191,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
