style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -2199,3 +2199,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
