style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -5201,3 +5201,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
