feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -2239,3 +2239,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
