style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -2257,3 +2257,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
