style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -5267,3 +5267,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
