chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -2283,3 +2283,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
