docs: update documentation

--- a/index.html
+++ b/index.html
@@ -5287,3 +5287,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
