style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -2323,3 +2323,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
