perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -2337,3 +2337,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
