fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -2333,3 +2333,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
