fix: resolve bug in component

--- a/index.html
+++ b/index.html
@@ -2367,3 +2367,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
