style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -2405,3 +2405,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
