test: add unit tests

--- a/index.html
+++ b/index.html
@@ -2403,3 +2403,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
