feat: add new feature 2024-08-21

--- a/index.html
+++ b/index.html
@@ -5343,3 +5343,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
