fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -2435,3 +2435,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
