feat: add new feature 2024-08-23

--- a/index.html
+++ b/index.html
@@ -2425,3 +2425,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
