docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -5363,3 +5363,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
