docs: update documentation

--- a/index.html
+++ b/index.html
@@ -2457,3 +2457,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
