fix: resolve bug in function

--- a/index.html
+++ b/index.html
@@ -5409,3 +5409,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
