test: add unit tests

--- a/index.html
+++ b/index.html
@@ -2459,3 +2459,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
