docs: update documentation

--- a/index.html
+++ b/index.html
@@ -5411,3 +5411,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
