fix: resolve bug in module

--- a/index.html
+++ b/index.html
@@ -2499,3 +2499,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
