refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -5445,3 +5445,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
