refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -2529,3 +2529,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
