test: add unit tests

--- a/index.html
+++ b/index.html
@@ -2575,3 +2575,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
