test: add unit tests

--- a/index.html
+++ b/index.html
@@ -2599,3 +2599,5 @@
 <!-- Improved accessibility -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
