fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -5525,3 +5525,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
