feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -5523,3 +5523,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
