perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -2649,3 +2649,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
