feat: add new feature 2024-09-26

--- a/index.html
+++ b/index.html
@@ -2663,3 +2663,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
