feat: add new feature 2024-09-30

--- a/index.html
+++ b/index.html
@@ -5593,3 +5593,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
