perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -2685,3 +2685,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
