perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -5595,3 +5595,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
