fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -2687,3 +2687,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
