feat: add new feature 2024-10-03

--- a/index.html
+++ b/index.html
@@ -2695,3 +2695,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
