refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -2717,3 +2717,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
