perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -2729,3 +2729,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
