docs: update documentation

--- a/index.html
+++ b/index.html
@@ -5669,3 +5669,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
