refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -2741,3 +2741,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
