chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -5723,3 +5723,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
