chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -5727,3 +5727,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
