refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -5729,3 +5729,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
