fix: resolve bug in component

--- a/index.html
+++ b/index.html
@@ -2803,3 +2803,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
